--- a/cinema_sys/package.json
+++ b/cinema_sys/package.json
@@ -13,8 +13,9 @@
     "element-ui": "^2.14.1",
     "store": "^2.0.12",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
-    "wangeditor": "^4.5.0"
+    "wangeditor": "^4.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
